# lab6-7

./: CMakeLists.txt  class.hpp  main.cpp
